# hackathon

./: .env.example  .gitignore  README.md  ask.py  docker-compose.yml  gerar_editais_abertos.py  pyproject.toml  run_auto_ingest.py  run_bot.py  run_ingest.py
.github/workflows/: ci.yml
channels/: base.py  engine.py  fake_engine.py  rate_limit.py  session.py  telegram.py
config/: prompts.py  settings.py
data/: calendario.json  editais_abertos.json  opportunities.json
deploy/: README.md  decifra-bot.service
dialogue/: editais_catalogo.py  intent.py  onboarding.py  profile.py  prompts.py  recommendation.py  reset.py
infra/: semantic_cache.py
ingestion/: auto_ingest.py  chunking.py  clean.py  convert.py  discovery.py  embeddings.py  extract.py  fetch.py  local_source.py  pipeline.py  processing.py  runner.py  weaviate_store.py
ingestion/sources/: base.py  fallback.py  ifsc_crawler.py  local_folder.py
recommend/: calendario.py  geografia.py  opportunities.py
retrieval/: generate.py  search.py
tests/: test_engine.py  test_generate_pure.py  test_golden.py  test_ingestion_discovery.py  test_ingestion_resilience.py  test_ingestion_sources.py  test_intent.py  test_profile.py  test_pure.py  test_rate_limit.py  test_recommend.py  test_recommendation.py  test_reset.py  test_seguranca.py  test_telegram.py
tests/e2e/: golden.json  test_golden.py
tests/integration/: test_engine.py  test_seguranca.py  test_telegram.py  test_tom_coleta.py
tests/unit/: test_calendario.py  test_campos_fechados_usam_botao.py  test_extraction.py  (+10 more)
utils/: hashing.py  validation.py
