[project]
name = "decifra"
version = "0.1.0"
description = "Assistente que traduz editais do IFSC via RAG. 1a Jornada Incubintech, Desafio 12."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "weaviate-client>=4.9",
    "voyageai>=0.3",
    "langchain-voyageai>=0.1",
    "tiktoken>=0.7",
    "docling>=2",
    "pypdf>=4",
    "python-docx>=1",
    "httpx>=0.27",
    "openai>=1.40",
    "python-telegram-bot>=22.8",
    "redis>=8.0.1",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
